--- a/lab5.html
+++ b/lab5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style_lab5.css">
-    <title>Laboratorio 5</title>
+    <title>Laboratorio 5 - Talento Tech</title>
 </head>
 <body>
     <div class="container">
