--- a/index14.html
+++ b/index14.html
@@ -16,10 +16,13 @@
                 <li><a href="#contact">Contacto</a></li>
             </ul>
 
-            <button id="nav-toggle" aria-label="Toggle navigation"><img src="menu.png" width="60" height="70" ></button>
+            <button id="nav-toggle" aria-label="Toggle navigation">
+                <img src="https://fonts.gstatic.com/s/i/materialiconsoutlined/menu/v6/24px.svg" alt="Menu Icon" width="30" height="30">
+            </button>
+            
         </nav>
     </header>
-    
+
     <main>
         <section id="home">
             <h1>Bienvenido a nuestro sitio</h1>
